# AgentDesk

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  FEATURES.md  LICENSE  Makefile  NOTICE  README.md  agentdesk.example.yaml
.github/workflows/: ci.yml
dashboard/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  agent-insights.ts  i18n.ts
dashboard/src/api/: client.ts  index.ts
dashboard/src/app/: office-workflow-pack.ts  useDashboardSocket.ts
dashboard/src/components/: AgentManagerView.tsx  ChatView.tsx  CommandPalette.tsx  DashboardPageView.tsx  MeetingDetailModal.tsx  MeetingMinutesView.tsx  MeetingProviderFlow.tsx  NotificationCenter.tsx  OfficeManagerModal.tsx  OfficeSelectorBar.tsx  OfficeView.tsx  OnboardingWizard.tsx  SettingsView.tsx  SkillCatalogView.tsx
dashboard/src/components/agent-manager/: AgentCard.tsx  AgentFormModal.tsx  AgentInfoCard.tsx  AgentsTab.tsx  AutoQueuePanel.tsx  DepartmentFormModal.tsx  EmojiPicker.tsx  KanbanColumn.tsx  KanbanTab.tsx  PipelineConfigView.tsx  types.ts  (+6 more)
dashboard/src/contexts/: KanbanContext.tsx  OfficeContext.tsx  SettingsContext.tsx  office-session-overlay.test.ts  office-session-overlay.ts
dashboard/src/styles/: main.css
dashboard/src/types/: index.ts
docs/: architecture.md
migrations/: 001_initial.sql
policies/: auto-queue.js  kanban-rules.js  pipeline.js  review-automation.js  timeouts.js  triage-rules.js
scripts/: agentdesk-dcserver.service  agentdesk.service  build-release.sh  com.agentdesk.release.plist  deploy-dev.sh  deploy.sh  install.sh  promote-release.sh
src/: config.rs  integration_tests.rs  kanban.rs  main.rs  pipeline.rs  runtime.rs
src/cli/: client.rs  dcserver.rs  doctor.rs  init.rs  mod.rs  utils.rs
src/db/: mod.rs  schema.rs
src/discord/: mod.rs
src/dispatch/: mod.rs
src/engine/: hooks.rs  intent.rs  loader.rs  mod.rs  ops.rs
src/github/: dod.rs  mod.rs  sync.rs  triage.rs
src/server/: mod.rs  ws.rs
src/server/routes/: agents.rs  agents_crud.rs  analytics.rs  auth.rs  auto_queue.rs  cron_api.rs  departments.rs  dispatched_sessions.rs  dispatches.rs  docs.rs  github.rs  hooks.rs  kanban.rs  kanban_repos.rs  meetings.rs  mod.rs  onboarding.rs  pipeline.rs  review_verdict.rs  reviews.rs  routes_tests.rs  session_activity.rs  settings.rs  stats.rs
src/services/: claude.rs  codex.rs  mod.rs  process.rs  provider.rs  session_backend.rs  tmux_diagnostics.rs
src/services/discord/: adk_session.rs  formatting.rs  health.rs  inflight.rs  meeting.rs  mod.rs  org_schema.rs  pcd.rs  prompt_builder.rs  recovery.rs  restart_report.rs  router.rs  runtime_store.rs  settings.rs  shared_memory.rs  tmux.rs  turn_bridge.rs
src/services/platform/: binary_resolver.rs  dump_tool.rs  mod.rs  shell.rs
src/session/: mod.rs
src/ui/: ai_screen.rs
(+23 files in other folders)
