[package]
name = "agentdesk"
version = "0.1.0"
edition = "2024"
description = "AI agent orchestration platform"
license = "MIT"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }

# Policy engine (QuickJS)
rquickjs = { version = "0.9", features = ["bindgen", "classes", "properties", "parallel"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
dirs = "6.0.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
